bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:4: error: i is already defined as value i
    case (i,i) => return 4*i
            ^